--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha ./tests/*.test.js",
+    "watch-test": "node_modules/mocha/bin/mocha --watch ./tests/*.test.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,11 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "sails-disk": "^0.10.8",
+    "sails-memory": "^0.10.5",
     "waterline": "^0.10.26"
+  },
+  "devDependencies": {
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3"
   }
 }
