--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha ./tests/*.test.js",
+    "test": "node_modules/mocha/bin/mocha ./tests/func.test.js",
     "watch-test": "node_modules/mocha/bin/mocha --watch ./tests/*.test.js",
     "start": "node server.js"
   },
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "chai": "^3.4.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "zombie": "^4.2.1"
   }
 }
