--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "node_modules/mocha/bin/mocha ./tests/users.test.js && node_modules/mocha/bin/mocha ./tests/func.test.js",
     "watch-test": "node_modules/mocha/bin/mocha --watch ./tests/*.test.js",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
